src/App.css
/* Import Fonts */
@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Montserrat:wght@300;400;500&display=swap');

/* Root Variables */
:root {
  /* Color Variables */
  --primary-color: #ffffff; /* White background */
  --secondary-color: #f2f2f2; /* Light gray for sections */
  --accent-color: #b76e79; /* Rose gold for accents */
  --text-color: #333333; /* Dark gray for text */
  --text-color-alt: #666666; /* Alternate text color */

  /* Button Colors */
  --button-background: var(--accent-color);
  --button-text-color: #ffffff;
  --button-hover-background: #a5646d; /* Slightly darker rose gold */
  --button-active: #adf7a4;
  --button-hover: #d8fdd4;
  --button-clickable: #e7ffe4;
  --button-clickable-lines: #657c62;
  --button-active-lines: #507c4a;
}

/* Base Styles */
html,
body {
  height: 100%;
  margin: 0;
  padding: 0;
  background-color: var(--primary-color);
  font-family: 'Montserrat', sans-serif;
  color: var(--text-color);
}

/* Headings */
h1,
h2,
h3 {
  font-family: 'Playfair Display', serif;
  font-weight: 400;
  color: var(--text-color);
  text-align: center;
  margin: 0;
}

h1 {
  font-size: 3em;
  margin-bottom: 20px;
}

h2 {
  font-size: 2em;
  margin-bottom: 16px;
}

h3 {
  font-size: 1.5em;
  margin-bottom: 12px;
}

/* Paragraphs */
p {
  font-size: 1em;
  line-height: 1.6;
  margin-bottom: 20px;
}

/* Buttons */
button {
  padding: 12px 24px;
  background-color: var(--button-background);
  color: var(--button-text-color);
  border: none;
  border-radius: 50px;
  cursor: pointer;
  font-size: 1em;
  transition: background-color 0.3s, transform 0.3s;
}

button:hover {
  background-color: var(--button-hover-background);
  transform: translateY(-2px);
}

button:disabled {
  background-color: #ccc;
  cursor: not-allowed;
}

button.selected {
  background-color: var(--button-active);
}

button.submit {
  align-items: center;
  width: 323px;
  padding: 10px 20px;
  border-radius: 5px;
  background-color: var(--button-active);
  font-size: 1.1em;
  position: absolute;
  bottom: 0%;
  left: 50%;
  transform: translate(-50%, -50%);
}

button.submit:hover {
  color: var(--button-active-lines);
}

button.submit:disabled {
  background-color: #ccc;
}

/* Home Page Container */
.homePageContainer {
  position: relative; /* Establish positioning context */
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 5px 20px 60px;
  background: 
  linear-gradient(rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2)),
  url('/public/bgimg.webp');
  /*background-image: url('/public/bgimg.webp');*/
  background-size: cover; /* or 'contain' */
  background-repeat: no-repeat;
  background-position: center top;
  background-attachment: fixed;
  color: #61685f;
  /* No need for overflow hidden here */
}

.homePageContainer > * {
  position: relative; /* Ensure content is above the overlay */
  z-index: 2; /* Place content above the overlay */
}


.homePageContainer .title {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  margin-bottom: 40px;
  background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent white background */
  padding: 15px;
  border-radius: 15px;
}

.homePageContainer .title h1 {
  font-size: 2.5em;
  margin-bottom: 10px;
}

.homePageContainer .title h4 {
  font-size: 1.2em;
  font-weight: 300;
  margin: 0;
}

.homePageContainer .logo {
  width: 80px; /* Adjust the width as needed */
  height: auto;
  margin-bottom: -10px; /* Adjust to align with text */
}

.homePageContainer .startbutton,
.homePageContainer .bottomstartbutton {
  padding: 15px 30px;
  border-radius: 50px;
  background-color: var(--button-background);
  color: var(--button-text-color);
  font-size: 1.1em;
  border: none;
  font-weight: 500;
  cursor: pointer;
  transition: background-color 0.3s, transform 0.3s;
  margin: 5px;
}

.homePageContainer .startbutton:hover,
.homePageContainer .bottomstartbutton:hover {
  background-color: var(--button-hover-background);
  transform: translateY(-2px);
}

.homePageContainer a {
  text-align: center;
  padding-bottom: 10px;
}

.homePageContainer .homepageText {
  max-width: 800px;
  padding: 20px;
}

.homePageContainer .homepageText p {
  font-size: 1em;
  line-height: 1.6;
  color: var(--text-color);
  margin-bottom: 20px;
  background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent white background */
  padding: 15px;
  border-radius: 15px;
}

/* Scroll Container */
.scroll-container {
  overflow-x: auto;
  padding: 10px 5px;
  scroll-behavior: smooth;
}

.scroll-items {
  display: flex;
  flex-direction: row;
  overflow-x: auto;
}

.scroll-items::-webkit-scrollbar {
  display: none;
}

.scroll-item {
  flex: 0 0 auto;
  width: 270px;
  margin-right: 10px;
  padding: 15px;
  border: 1px solid #ccc;
  text-align: left;
  box-sizing: border-box;
  cursor: pointer;
  background-color: #f9f9f9;
  border-radius: 10px;
  transition: transform 0.3s, box-shadow 0.3s;
}

.scroll-item:last-child {
  margin-right: 0;
}

.scroll-item:hover {
  transform: translateY(-5px);
  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
}

.scroll-item h2 {
  margin-top: 0;
  margin-bottom: 10px;
  font-weight: 500;
  font-size: 1.2em;
  color: #333;
}

.scroll-item p {
  margin: 10px 0;
  font-size: 0.95em;
  color: #555;
}

.item-feature {
  font-size: 0.9em;
  color: #777;
  margin-top: 10px;
  font-weight: bold;
}

.item-description {
  font-size: 0.85em;
  color: #888;
  margin-bottom: 10px;
}

.additional-option {
  text-align: center;
  margin-top: 20px;
}

.additional-option a {
  color: #007BFF;
  text-decoration: none;
}

.additional-option a:hover {
  text-decoration: underline;
}

.selected-item {
  border: 2px solid var(--accent-color);
}

/* End Scroll Container */

